Fix scrollbar overflow

--- a/src/blocks/block-layout/styles/editor.scss
+++ b/src/blocks/block-layout/styles/editor.scss
@@ -8,6 +8,7 @@
 	.components-modal__content {
 		background: #f2f2f2;
 		padding: 0;
+		overflow-x: hidden;
 	}
 
 	.components-modal__header {
